cmake_minimum_required(VERSION 3.16)
project(cpp_park)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_park main.cpp 000binocular_operator/000main.cpp 000binocular_operator/000main.h 001namespace/game1.h 001namespace/game1.cpp 001namespace/game2.h 001namespace/game2.cpp 001namespace/test001.cpp 001namespace/test001.h)